--- a/install_packages.yml
+++ b/install_packages.yml
@@ -23,9 +23,8 @@
           - containerd.io
           - docker-compose-plugin  # This is the modern way to get 'docker compose'
         state: present  
-    - name: Check cockpit before starting
+    - name: Start cockpit service
       systemd:
         name: cockpit
         state: started
         enabled: yes
-        check_mode: yes
