--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,3 @@
 ---
-- import_playbook: install_packages.yml
-# - import_playbook: configure_docker.yml
+# - import_playbook: install_packages.yml
+- import_playbook: configure_docker.yml
