--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,7 @@
 ---
-# - import_playbook: install_packages.yml
-- import_playbook: configure_docker.yml
+
+- name: Basic Setup Role
+  hosts: all
+  become: yes
+  roles:
+    - basic_setup
