feat(kvm_setup): create variables for image configuration and add download task
The commit introduces two key changes to support KVM image management:
1. Added *kvm_image_url*, *kvm_image_pool*, and *kvm_image_name* variables in `main.yml` to centralize configuration
2. Added *download_image.yml* task that uses `get_url` to fetch Ubuntu 22.04.5 server image to the libvirt storage pool

These changes enable flexible image configuration through variables while automating the download process. The task ensures we store Ubuntu's Jammy release in the standard libvirt image location for simplified KVM deployment workflows.

--- a/kvm_setup/vars/main.yml
+++ b/kvm_setup/vars/main.yml
@@ -1,3 +1,8 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # vars file for kvm_setup
+
+
+kvm_image_url: "https://releases.ubuntu.com/jammy/ubuntu-22.04.5-live-server-amd64.iso"
+kvm_image_pool: "/var/lib/libvirt/images/"
+kvm_image_name: "kvm-image.qcow2"
