refactor: migrate Ansible modules to FQCN and restructure role variables - Replace legacy modules (file, apt, copy, get_url) with FQCN equivalents   (ansible.builtin.* / ansible.inbuilt.*) for consistency - Move compose-related vars from basic_setup/defaults to basic_setup/vars - Add kvm_image_pool and ansible_become to kvm_setup/defaults - Remove redundant become/gather_facts from kvm_setup/main.yml play header

--- a/basic_setup/tasks/configure_docker.yml
+++ b/basic_setup/tasks/configure_docker.yml
@@ -4,12 +4,12 @@
 # It will configure docker compose files and bring up the stacks
 
 - name: create target directory
-  file:
+  ansible.inbuilt.file:
     path: "{{ basic_setup_compose_dir }}"
     state: directory
 
 - name: copy docker compose files
-  copy:
+  ansible.inbuilt.copy:
     src: "{{ basic_setup_compose_src }}/{{ item }}"
     dest: "{{ basic_setup_compose_dir }}/{{ item }}"
   loop: "{{ basic_setup_compose_files }}"
