--- a/kvm_setup/tasks/main.yml
+++ b/kvm_setup/tasks/main.yml
@@ -1,72 +1,50 @@
 ---
 - name: Create multiple KVM VMs using community.libvirt.virt
   hosts: localhost
-  gather_facts: false
-  become: true
   collections:
     - community.libvirt
 
   tasks:
     - name: Ensure image pool dir exists
-      file:
+      ansible.builtin.file:
         path: "{{ kvm_image_pool }}"
         state: directory
         owner: root
         group: root
         mode: '0755'
 
-    - name: Download ISO image (idempotent)
-      get_url:
+    - name: Download base KVM image if not present
+      ansible.builtin.get_url:
         url: "{{ kvm_image_url }}"
-        dest: "{{ (kvm_image_pool.rstrip('/')) + '/' + (kvm_image_url | basename) }}"
-        mode: '0644'
-      register: download_iso
+        dest: "{{ kvm_image_pool }}"
+        url: "{{ kvm_image_url }}"    
+        destination: "{{ kvm_image_pool }}"
+        checksum: "sha256:{{ base_image_sha }}"
+      register: download_image
 
-    - name: Build VM index list
-      set_fact:
-        vm_indices: "{{ range(1, (kvm_vms_counts | int) + 1) | list }}"
+    - name: convert iso to qcow2
+      ansible.builtin.command: >
+        qemu-img convert -O qcow2
+        {{ kvm_image_pool }}/{{ base_image_name }}.iso
+        {{ kvm_image_pool }}/{{ kvm_vm_name }}.qcow2
+      creates: "{{ kvm_image_pool }}/{{ kvm_vm_name }}.qcow2"
+      when: download_image.changed | default(false)
 
-    - name: Create qcow2 disks (one per VM) and define/start VMs using libvirt XML
-      loop: "{{ vm_indices }}"
-      loop_control:
-        loop_var: vm_idx
-        label: "{{ base_image_name }}{{ vm_idx }}"
-      block:
-        - name: Compose names and paths
-          set_fact:
-            vm_name: "{{ base_image_name }}{{ vm_idx }}"
-            vm_disk_path: "{{ (kvm_image_pool.rstrip('/')) + '/' + base_image_name + vm_idx|string + '.qcow2' }}"
-            iso_path: "{{ (kvm_image_pool.rstrip('/')) + '/' + (kvm_image_url | basename) }}"
-
-        - name: Create qcow2 disk if missing
-          command: >
-            qemu-img create -f qcow2 {{ vm_disk_path }} {{ vm_disk_size }}
-          args:
-            creates: "{{ vm_disk_path }}"
-
-        - name: Render and define domain from template (define only)
-          community.libvirt.virt:
-            command: define
-            xml: "{{ lookup('template', 'vm_template.xml.j2') }}"
-          register: define_result
-
-        - name: Start the VM (ensure running)
-          community.libvirt.virt:
-            name: "{{ vm_name }}"
-            state: running
-            autostart: true
-          register: start_result
-
-      rescue:
-        - name: Debug block failure
-          debug:
-            msg: "Failed creating/defining/starting {{ vm_name }}; check previous task output."
-
-    - name: List all libvirt domains (for info)
+    - name: Create vm from the image
       community.libvirt.virt:
-        command: list_vms
-      register: all_vms
+        name: "{{ kvm_vm_name }}"
+        pool: "{{ kvm_image_pool }}"
+        base_image: "{{ base_image_name }}.qcow2"
+        ram_mb: "{{ vm_ram_mb }}"
+        vcpus: "{{ vm_vcpus }}"
+        disk_size: "{{ vm_disk_size }}"
+        os_variant: "{{ os_variant }}"
+        network: "{{ network }}"
+        cpu_model: "{{ cpu_model }}"
+        state: present
 
-    - name: Show created VMs
-      debug:
-        var: all_vms.list_vms
+    - name: Start the VM
+      community.libvirt.virt:
+        name: "{{ kvm_vm_name }}"
+        state: running 
+
