--- a/kvm_setup/vars/main.yml
+++ b/kvm_setup/vars/main.yml
@@ -5,8 +5,9 @@
 
 kvm_image_url: "https://releases.ubuntu.com/jammy/ubuntu-22.04.5-live-server-amd64.iso"
 kvm_image_pool: "/var/lib/libvirt/images"
-base_image_name: "ubuntu-server-"
-kvm_vms_counts: 4
+base_image_name: "ubuntu-server-22.04" # base image name without extension
+kvm_vm_name: "ubuntu-server-vm" # base name for VMs
+kvm_vms_counts: 1
 vm_ram_mb: 2048          # adjust RAM per VM
 vm_vcpus: 2              # adjust vCPU per VM
 vm_disk_size: "20G"      # size for created qcow2 disks
