--- a/kvm_setup/defaults/main.yml
+++ b/kvm_setup/defaults/main.yml
@@ -1,3 +1,6 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # defaults file for kvm_setup
+
+kvm_image_pool: "/var/lib/libvirt/images"
+ansible_become: true
