--- a/main.yml
+++ b/main.yml
@@ -5,3 +5,9 @@
   become: yes
   roles:
     - basic_setup
+
+- name: KVM Setup Role
+  hosts: gcp_workers
+  become: yes
+  roles:
+    - kvm_setup
