--- a/basic_setup/defaults/main.yml
+++ b/basic_setup/defaults/main.yml
@@ -26,3 +26,8 @@ basic_setup_ntp_servers:
 basic_setup_allow_passwordless_sudo: false
 
 # Compose source directory
+basic_setup_compose_src: "{{ role_path }}/files"
+basic_setup_compose_dir: /home/compose_file
+basic_setup_compose_files:
+  - sonarqube-docker-compose.yml
+  - n8n-docker-compose.yml
